fix: change card z-index

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -7,6 +7,8 @@
     min-width: 96%;
   }
 
+  position: relative;
+
   display: flex;
   flex-direction: column;
   padding: 8px;
@@ -17,6 +19,8 @@
   
   background: #F3F4F4;
   border-radius: 12px;
+
+  z-index: 10;
 
   &:nth-child(2) {
     @include sm {
